--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ body {
     margin-top: 20px;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.row {
+    display: flex;
+}
+
 .cell {
     background-color: #f2f2f2;
     border: 2px solid #000;
@@ -21,6 +32,7 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
+    font-size: 2em;
 }
 
 .cell:hover {
